z-index issues

--- a/www/scss/public.css
+++ b/www/scss/public.css
@@ -454,7 +454,7 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   width: 100%;
   padding: 12px; }
 
